--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
+
 .actionable {
   cursor: pointer;
 }
